Segunda Tarea terminada, DS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(TareasDatos)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(TareasDatos main.cpp)
+add_executable(TareasDatos main.cpp
+        Tarea_tipo_guardados.cpp)
