cambios que hice ayer pero no termine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,8 @@ add_executable(TareasDatos
         rectangulo.cpp
         rectangulo.h
         Circulo.cpp
-        Circulo.h)
+        Circulo.h
+        fecha.cpp
+        fecha.h
+        tiempo.cpp
+        tiempo.h)
