Tarea en proceso para el martes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,6 @@ add_executable(TareasDatos
         "SECOND HOMEWORK/empleado.cpp"
         "SECOND HOMEWORK/empleado.h"
         "THIRD HOMEWORK/Algoritms_and_symptotic_notation.cpp"
+        "FOURTH HOMEWORK/Archivo.cpp"
+        "FOURTH HOMEWORK/Archivo.h"
 )
